CSS: fix rotate on iOS/Safari (hopefully)

--- a/src/main/webapp/public/less/dukecon.less
+++ b/src/main/webapp/public/less/dukecon.less
@@ -223,6 +223,7 @@ h1 #backbutton_before {
     content: " ";
     height: 1em;
     transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
     width: 1em;
     float:left;
     position:relative;
@@ -385,6 +386,7 @@ input[type="checkbox"] + label:before {
 }
 div.time-cell {
     transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
     position: relative;
     top: 25px;
     /* Internet Explorer */
